--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "contributors": [
     {
-      "name": "Under",
-      "email": ""
-    }
+      "name": "Under"
+    },
+	{
+	  "name": "MSFTserver"
+	}
   ],
   "keywords": [
     "ravencoin",
@@ -34,7 +36,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/underdarkskies/ravencore-lib.git"
+    "url": "https://github.com/raven-community/ravencore-lib.git"
   },
   "browser": {
     "request": "browser-request"
@@ -46,10 +48,10 @@
     "elliptic": "=3.0.3",
     "inherits": "=2.0.1",
     "lodash": "^3.10.1",
-    "node-x16r": "github:raven-community/node-x16r#master"
+    "node-x16r": "github:raven-community/node-x16r/tree/1.0.0"
   },
   "devDependencies": {
-    "ravencore-build": "github:raven-community/ravencore-build#master",
+    "ravencore-build": "github:raven-community/ravencore-build/tree/1.0.0",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
