--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "elliptic": "=3.0.3",
     "inherits": "=2.0.1",
     "lodash": "^3.10.1",
-    "node-x16r": "github:raven-community/node-x16r/tree/1.0.0"
+    "node-x16r": "github:raven-community/node-x16r#master"
   },
   "devDependencies": {
-    "ravencore-build": "github:raven-community/ravencore-build/tree/1.0.0",
+    "ravencore-build": "github:raven-community/ravencore-build/#master",
     "brfs": "^1.2.0",
     "chai": "^1.10.0",
     "gulp": "^3.8.10",
